--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
+    "firebase": "^9.1.1",
+    "firebase-admin": "^9.12.0",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.0",
@@ -24,6 +26,6 @@
     "swagger-ui-express": "^4.1.6"
   },
   "engines": {
-    "node": "14.x"
+    "node": "16.x"
   }
 }
